--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,17 +28,38 @@
 
 /* font-size */
 
-.font-size-20{
-    font-size: 22px;
-}
 
 .font-size-15{
     font-size: 15px;
 }
+
+.font-size-20{
+    font-size: 22px;
+}
+
+.font-size-30{
+    font-size: 30px;
+}
+
 .text-black{
     color: black;
 }
 
 .bg-img{
-    background-image: url(/assets/imgs/banners/vinyl-banner.jpg);
+    background-image: url(../../assets/imgs/banners/vinyl-banner.jpg);
+    color: white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    text-shadow: 5px 5px 10px black;
 }
+
+.bg-img-cd{
+    background-image: url(../../assets/imgs/banners/cd-banner.jpg);
+    color: white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    text-shadow: 5px 5px 10px black;
+}
+
